# hurtful-py

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/hurtful_py/: __init__.py  main.py
