[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hurtful_py"
version = "0.0.1"
description = "Библиотека, созданная для отборных оскорблений"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Puker228", email = "karatelanalov@yandex.ru" }
]
dependencies = [
    "pyaudio"
]

[project.urls]
Homepage = ""
